[tool.poetry]
name = "mhti"
version = "1.0.0"
description = "MHTI - TV Series metadata scraper with TMDB integration"
authors = ["Developer"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.6.0"
aiosqlite = "^0.19.0"
cryptography = "^42.0.0"
httpx = {extras = ["socks"], version = "^0.27.0"}
croniter = "^2.0.0"
sse-starlette = "^2.0.0"
watchdog = "^4.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
p115client = "0.0.8.6.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.2.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["server/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.black]
line-length = 100
